# geographic_info

./: .gitignore  CHANGELOG.rst  README.rst  rosdep.yaml  stack.xml
geodesy/: CHANGELOG.rst  CMakeLists.txt  conf.py  geodesy.gen_uuid.rst  geodesy.rst  geodesy.wu_point.rst  index.rst  manifest.xml  package.xml  rosdoc.yaml  setup.py
geodesy/doc/: Makefile  conf.py  index.rst
geodesy/include/geodesy/: geodetic_system.h  geotypes.h  utm.h  wgs84.h
geodesy/scripts/: utm_geodesy.py
geodesy/src/conv/: CMakeLists.txt  utm_conversions.cpp
geodesy/src/geodesy/: bounding_box.py  gen_uuid.py  props.py  utm.py  wu_point.py
geodesy/tests/: test_bounding_box.py  test_geodetic_system.cpp  test_geotypes.cpp  test_props.py  test_utm.cpp  test_utm.py  test_uuid.py  test_wgs84.cpp  test_wu_point.py
geographic_info/: CHANGELOG.rst  CMakeLists.txt  package.xml
geographic_msgs/: CHANGELOG.rst  CMakeLists.txt  geographic_msgs_mapping_rule.yaml  mainpage.dox  manifest.xml  package.xml
geographic_msgs/action/: GetGeographicMap.action
geographic_msgs/include/: CMakeLists.txt
geographic_msgs/include/geographic_msgs/: validation.hpp
geographic_msgs/msg/: BoundingBox.msg  GeoPath.msg  GeoPoint.msg  GeoPointStamped.msg  GeoPose.msg  GeoPoseStamped.msg  GeoPoseWithCovariance.msg  GeoPoseWithCovarianceStamped.msg  GeographicMap.msg  GeographicMapChanges.msg  MapFeature.msg  PointSet.msg  RouteNetwork.msg  RoutePath.msg  RouteSegment.msg  UTMPoint.msg  UTMPose.msg  UniqueID.msg  WayPoint.msg  WayPointID.msg  WaySequence.msg
geographic_msgs/srv/: GetGeoPath.srv  GetGeographicMap.srv  GetRoutePlan.srv
geographic_msgs/test/: CMakeLists.txt  test_validation.cpp
navsat_odometry/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelets.xml
navsat_odometry/src/nodes/: CMakeLists.txt  navsat_odom.cpp  navsat_odom.h  nodelet.cpp
navsat_odometry/tests/: gendata.py  genflying.py  genmoving.py  genstatic.py  no_data.test  nodelet_hz.test  nodelet_moving.test  nodelet_static.test
rosinstall/: geographic_info.rosinstall  unique_identifier.rosinstall
