<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geodesy</name>
  <version>0.5.5</version>
  <description>
    Python and C++ interfaces for manipulating geodetic coordinates.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>

  <url type="website">http://wiki.ros.org/geodesy</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/geographic_info/issues</url>
  <url type="repository">https://github.com/ros-geographic-info/geographic_info.git</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>unique_id</build_depend>
  <build_depend>uuid_msgs</build_depend>

  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>unique_id</exec_depend>
  <exec_depend>uuid_msgs</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-pyproj</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-pyproj</exec_depend>

  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <!-- these dependencies are only for testing -->
  <test_depend>rosunit</test_depend>

  <!-- documentation dependencies -->
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-catkin-pkg-modules</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-catkin-pkg-modules</build_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
