<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>geographic_info</name>
  <version>1.0.5</version>
  <description>
    Geographic information metapackage.

    Not needed for wet packages, use only to resolve dry stack
    dependencies.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <author>Jack O'Quin</author>
  <license>BSD</license>
  <url>http://wiki.ros.org/geographic_info</url>
  <url type="repository">https://github.com/ros-geographic-info/geographic_info</url>
  <url type="bugtracker">https://github.com/ros-geographic-info/geographic_info/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geodesy</depend>
  <depend>geographic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
